--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
+@import url("https://fonts.googleapis.com/css2?family=Munito&display=swap");
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  margin: 20px;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+/* Create two equal columns that floats next to each other */
+.column1 {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  height: 300px; 
+}
+
+.column2 {
+  float: left;
+  width: 80%;
+  padding: 10px;
+  height: 300px; 
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  margin: 10px;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: red;
+  color: white;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+
+}
+
+
+
+
+
+.sidebar{width:250px;background-color:#fff;text-align:left}
+.sidebar .sidebar-content{position:-webkit-sticky;position:sticky;top:100px;border-top:1px solid #eaeaea;border-left:1px solid #eaeaea;border-right:1px solid #eaeaea}
+.sidebar .category-item{padding:16px;text-transform:capitalize;cursor:pointer;border-bottom:1px solid #eaeaea;transition:all fade .1s}
+.sidebar .category-item:hover{background-color:#ededed}
+.sidebar .category-item.--active{background-color:#fa4a5b;color:#fff}
+.sidebar .category-item .category-item__count{font-size:12px;margin-top:8px;opacity:.6}
+
+
